stories/assets/scss/_mixins.scss
@import './variables';
@import './breakpoints';

//background image gradient
@mixin background-image($deg, $colorname, $opacity) {
  background: linear-gradient($deg, $colorname, $opacity);
}

// select box appearance
@mixin x-appearance($value) {
  -webkit-appearance: $value;
  -moz-appearance: $value;
  appearance: $value;
}

//animation
@mixin animation($animation) {
  -webkit-animation: $animation;
  -moz-animation: $animation;
  -ms-animation: $animation;
  -o-animation: $animation;
  animation: $animation;
}

//transition
@mixin transition($transitions...) {
  -webkit-transition: $transitions;
  -moz-transition: $transitions;
  -ms-transition: $transitions;
  -o-transition: $transitions;
  transition: $transitions;
}

//transition-delay
@mixin transitiondelay($transitiondelay...) {
  -webkit-transition-delay: $transitiondelay;
  -moz-transition-delay: $transitiondelay;
  -ms-transition-delay: $transitiondelay;
  -o-transition-delay: $transitiondelay;
  transition-delay: $transitiondelay;
}

//transform
@mixin transform($transforms) {
  -webkit-transform: $transforms;
  -moz-transform: $transforms;
  -ms-transform: $transforms;
  -o-transform: $transforms;
  transition: $transforms;
}

// Rotate
@mixin rotate($deg) {
  @include transform(rotate(#{$deg}deg));
}

// Translate
@mixin translate($x, $y) {
  @include transform(translate($x, $y));
}

// Scale
@mixin scale($scale) {
  @include transform(scale($scale));
}

// Skew
@mixin skew($x, $y) {
  @include transform(skew(#{$x}deg, #{$y}deg));
}

//gradient color
@mixin gradient($direction, $list) {
  background: -webkit-linear-gradient($direction, $list);
  background: -moz-linear-gradient($direction, $list);
  background: -o-linear-gradient($direction, $list);
  background: linear-gradient($direction, $list);
}

/* mixing  end */

//loader animation
@keyframes loader-animation {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

// link animation
@keyframes lineLoop-animation {
  0% {
    background-position: 100% 100%, -30px 100%;
    background-size: 100% 2px, 0 2px;
  }

  to {
    background-position: calc(100% + 30px) 100%, 0 100%;
    background-size: 0 2px, 100% 2px;
  }
}

/* placehoder start */
%paragragh-font-14 {
  font-size: $font-size-12;

  @include devicebreak(medium) {
    font-size: $font-size-14;
  }
}

%paragragh-font-16 {
  font-size: $font-size-14;
  line-height: 1.4;

  @include devicebreak(medium) {
    font-size: $font-size-16;
  }
}

%paragragh-font-20 {
  font-size: $font-size-16;

  @include devicebreak(medium) {
    font-size: $font-size-20;
  }
}

%paragragh-font-24 {
  font-size: $font-size-20;
  line-height: 1.1;

  @include devicebreak(medium) {
    font-size: $font-size-24;
  }
}

%border-bottom {
  border-bottom: 1px solid $color-gray-400;
}

%img-cover {
  height: 100%;
  object-fit: cover;
  padding: 0;
  width: 100%;
}

%border-none {
  @extend %img_none;

  border: none;
}

%sidebar {
  align-items: center;
  cursor: pointer;
  display: flex;
  justify-content: space-between;
  overflow: hidden;
  padding: $spacing-16;
  position: relative;

  @include devicebreak(medium) {
    padding: $spacing-24;
  }
}

%sidebar-selected {
  background-color: $color-blue-600;

  h6 {
    color: $color-white;
  }

  &:hover {
    background-color: $color-blue-600;
  }
}

%checbox-radio-before {
  border: 2px solid $color-dark-red;
  content: '';
  height: 12px;
  left: 0;
  position: absolute;
  top: 5px;
  width: 12px;
  @extend %background-white;
}

%img-hover-effect {
  @include transition(opacity 0.5s ease);

  background-image: linear-gradient(42deg, $color-yellow, transparent 80%);
  opacity: 0;
}

%button {
  align-items: center;
  border: none;
  display: flex;
  font-size: $font-size-16;
  font-weight: 700;
  letter-spacing: 0.03em;
  line-height: 1;

  @include devicebreak(medium) {
    display: inline-flex;
  }
}

%ctaimg {
  content: '';
  height: 20px;
  margin-left: $spacing-12;
  width: 13px;
}

%field__image {
  background-repeat: no-repeat;
  height: 20px;
  left: 10px;
  left: 14px;
  position: absolute;
  top: 22px;
  width: 20px;
  z-index: 1;
}

%feature__card {
  left: 0;
  top: 0;
  width: 100%;
}

%arrow {
  @include transform(translateY(-50%));
  @include transition(all 200ms ease-in-out);

  background: url(#{$img-path-Iconfourback}/Chevron-down.svg) no-repeat center center;
  content: '';
  float: right;
  height: 13px;
  position: absolute;
  right: 19px;
  top: 50%;
  width: 20px;
}

%absolute__content {
  content: '';
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

%sidebar-chevron {
  @include transition(0.3s ease);

  background: url(#{$img-path-Icon}/Chevron-down.svg) no-repeat center center;
  content: '';
  height: 0.813rem;
  position: absolute;
  right: 1.188rem;
  top: 20px;
  width: 20px;

  @include devicebreak(medium) {
    top: 1.125rem;
    padding: 0.625rem 0;
  }
}

%language_switcher {
  border: none;
  font-size: $font-size-14;
  font-weight: 600;
  text-transform: uppercase;
}

%img_none {
  background-image: none;
}

%absolute__overflow {
  height: 100%;
  overflow: hidden;
  position: absolute;
  width: 100%;
}

%select_default {
  border: 2px solid $color-black;
  cursor: pointer;
  font-size: $font-size-16;
  font-weight: 600;
  margin: 0;
  min-width: 288px;
  padding: $spacing-16 $spacing-50 $spacing-16 $spacing-16;
  position: relative;
  text-transform: uppercase;
  margin: 0;
  color:$color-black;
}

%select_option {
  border: 2px solid $color-black;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  display: none;
  max-height: 300px;
  min-height: 100px;
  min-width: 288px;
  padding: 0 $spacing-16;
  width: 100%;
}

%select_rtl {
  padding-left: 3.125rem;
  padding-right: $spacing-16;
  text-align: right;
}

%select_rtl_after {
  left: 16px;
  margin: 0;
  right: auto;
}

%no-animation {
  -webkit-animation: none;
  -moz-animation: none;
  -ms-animation: none;
  -o-animation: none;
  animation: none;
}

%left-to-right {
  @include transform(translateX(-100px));
  @include transition(
    transform 1.2s cubic-bezier(0.34, 0.41, 0.03, 1),
    opacity 1.2s cubic-bezier(0.34, 0.41, 0.03, 1)
  );

  opacity: 0;
  visibility: hidden;
}

%inviewport_left_right {
  @include transform(translateX(0));

  opacity: 1;
  visibility: visible;
}

%scale-up {
  @include transform(scale(0.9));
  @include transition(transform 1.2s cubic-bezier(0.34, 0.41, 0.03, 1));
}

%opacity-only {
  @include transition(opacity 1.2s cubic-bezier(0.34, 0.41, 0.03, 1));

  opacity: 0;
}

%inviewport_opacity_only {
  @include transform(translateX(0));

  opacity: 1;
}

%expand_to_size {
  @include transition(max-width 0.5s ease);

  margin: 0 auto;
  max-width: 100%;
}

%carousel_arrow {
  background: transparent;
  border: none;
  cursor: pointer;
  padding: 0;
  vertical-align: bottom;
  width: 2.75rem;
  height: 2.75rem;
}

%carousel_tag {
  color: $color-black;
  font-size: 0.75rem;
  font-weight: 700;
  letter-spacing: 0.48px;
  line-height: 0.84;
  text-transform: uppercase;
}

%carousel_title {
  font-weight: 400;
  margin-bottom: 1rem;
}

%carousel_desc {
  font-size: 1rem;
  margin-bottom: 1.5rem;
}

%header {
  background-color: $color-gray-100;
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
  height: 7.1875rem;
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 9;
}

%carousel_arrows {
  display: none;

  @media (pointer: coarse) and (hover: none) and (min-width: 48em) {
    display: block;
  }
}

%background-white {
  background-color: white;
}
/* placehoder end */

